tests/transpiler/x/hs/join_multi.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/join_multi.hs:31:26: error:
    Variable not in scope: name
    Suggested fix:
      Notice that ‘name’ is a field selector belonging to the type ‘GenType1’
      that has been suppressed by NoFieldSelectors.
   |
31 | result = [Map.fromList [(name, c.name), (sku, i.sku)] | o <- orders, c <- customers, i <- items, o.customerId == c.id && o.id == i.orderId]
   |                          ^^^^

/workspace/mochi/tests/transpiler/x/hs/join_multi.hs:31:42: error:
    Variable not in scope: sku
    Suggested fix:
      Notice that ‘sku’ is a field selector belonging to the type ‘GenType3’
      that has been suppressed by NoFieldSelectors.
   |
31 | result = [Map.fromList [(name, c.name), (sku, i.sku)] | o <- orders, c <- customers, i <- items, o.customerId == c.id && o.id == i.orderId]
   |                                          ^^^
